Bug 1056394: OS X: Properly propagate timestamps. r=rillian

This isn't strictly correct, but is non-decreasing except at
seeks and appears to work in practice.