content/media/fmp4/apple/AppleATDecoder.h
@@ -49,7 +49,7 @@ private:
   MediaDataDecoderCallback* mCallback;
   AudioConverterRef mConverter;
   AudioFileStreamID mStream;
-  uint64_t mCurrentAudioFrame;
+  Microseconds mCurrentAudioTimestamp;
   int64_t mSamplePosition;
   bool mHaveOutput;
   AudioStreamBasicDescription mOutputFormat;
